--- a/credits.html
+++ b/credits.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MỘT SỐ ỨNG DỤNG THỰC TẾ CỦA MÁY TÍNH</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
 </head>
 <body>
      <nav class="navbar">
@@ -16,8 +18,11 @@
     </nav>
 
     <main>
-        <h1>CREDITS</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse mollitia nam quam quisquam? Labore blanditiis animi atque at commodi iusto, itaque nulla neque ipsam minima officia perferendis nemo autem dicta.</p>
+        <div class="text">
+            <h1>CREDITS</h1>
+            <p>Cảm ơn tập thể lớp 9/7</p>
+            <p></p>
+        </div>
     </main> 
 </body>
 </html>
