--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MỘT SỐ ỨNG DỤNG THỰC TẾ CỦA MÁY TÍNH</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar">
@@ -16,8 +17,12 @@
     </nav>
 
     <main>
-        <h1>TRANG CHỦ</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse mollitia nam quam quisquam? Labore blanditiis animi atque at commodi iusto, itaque nulla neque ipsam minima officia perferendis nemo autem dicta.</p>
-    </main>
+        <div class="text">
+            <h1>TRANG CHỦ</h1>
+            <p class="hi_thay">Hello thầy Tuấn,</p>
+            <p>Đây là trang web sẽ tổng hợp hết những website của lớp 9/7 tập hợp những ứng dụng của máy tính trong thực tế</p>
+            <p>Mong thầy cho cả lớp 10đ ạ 🙏</p>
+        </div>
+    </main> 
 </body>
 </html>
