--- a/ungdung.html
+++ b/ungdung.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MỘT SỐ ỨNG DỤNG THỰC TẾ CỦA MÁY TÍNH</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
 </head>
 <body>
      <nav class="navbar">
@@ -16,8 +18,21 @@
     </nav>
 
     <main>
-        <h1>MỘT SỐ ỨNG DỤNG THỰC TẾ</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse mollitia nam quam quisquam? Labore blanditiis animi atque at commodi iusto, itaque nulla neque ipsam minima officia perferendis nemo autem dicta.</p>
+        <div class="text">
+            <h1>MỘT SỐ ỨNG DỤNG THỰC TẾ</h1>
+            <p>Những lĩnh vực ứng dụng máy tính:</p>   
+        </div>
+        <div class="linhvuc">
+            <ul>
+                <li id="hanhchinh"><p><a href="https://sites.google.com/view/nhom7lop97/home" target="_blank">QUẢN LÝ HÀNH CHÍNH, XÃ  HỘI</a></p>
+
+            <ul>
+        </div>
+        <div class="linhvuc">
+            <ul>
+                <li id="a"><p><a href="">LĨNH VỰC 2</a></p>
+            <ul>
+        </div>
     </main> 
 </body>
 </html>
