--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
     <main>
         <div class="text">
             <h1>TRANG CHỦ</h1>
-            <p class="hi_thay">Hello thầy Tuấn,</p>
-            <p>Đây là trang web sẽ tổng hợp hết những website của lớp 9/7 tập hợp những ứng dụng của máy tính trong thực tế</p>
-            <p>Mong thầy cho cả lớp 10đ ạ 🙏</p>
+            <br>
+            <p>Hello thầy Tuấn</p>
+            <br>
+            <p>Đây là trang web sẽ tổng hợp hết những website của lớp 9/7 về những ứng dụng của máy tính trong thực tế</p>
         </div>
     </main> 
 </body>
