--- a/ungdung.html
+++ b/ungdung.html
@@ -20,11 +20,12 @@
     <main>
         <div class="text">
             <h1>MỘT SỐ ỨNG DỤNG THỰC TẾ</h1>
+            <br>
             <p>Những lĩnh vực ứng dụng máy tính:</p>   
         </div>
         <div class="linhvuc">
             <ul>
-                <li id="hanhchinh"><p><a href="https://sites.google.com/view/nhom7lop97/home" target="_blank">QUẢN LÝ HÀNH CHÍNH, XÃ  HỘI</a></p>
+                <li id="hanhchinh"><p><a href="https://lop97nhom7.my.canva.site/" target="_blank">QUẢN LÝ HÀNH CHÍNH VÀ XÃ HỘI</a></p>
 
             <ul>
         </div>
